# text-frequency-analysis

./: .gitignore  JS_FLOW.md  README.md  README_PREVIEW.md  build-simple.bat  index.html  three.html
js/: text_frequency.js  text_frequency.wasm  text_frequency_js.js  text_frequency_wasm.js  text_frequency_wasm.wasm
js/constants/: korean-rules.js
js/utils/: korean-processor.js  language-detector.js  string-utils.js  text-normalizer.js  word-validators.js
wasm/: CMakeLists.txt  text_frequency.cpp
